# eureka_beamline

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
backend/src/eureka_beam/: main.py
backend/src/eureka_beam/agents/: __init__.py  base.py
backend/src/eureka_beam/agents/creation/: __init__.py  device_generator.py  ioc_analyzer.py  package_creator.py  package_simulation.py  plan_generator.py
backend/src/eureka_beam/agents/execution/: __init__.py  beamline_deployment.py  schema_validator.py  test_plan_simulation.py
backend/src/eureka_beam/agents/maintenance/: __init__.py  documentation_writer.py  training_content.py
backend/src/eureka_beam/routers/: ioc_router.py
backend/src/eureka_beam/schemas/: ioc.py
backend/src/tests/: conftest.py  test_ioc_router.py
backend/src/tests/routers/: test_ioc_router.py
documents/: bits_repo.txt
iocs/: adsim_db_ioc.txt  adsim_ioc_setup.txt  optics_db_ioc.txt  optics_iocsh.txt  settings.iocsh  sim.py  st.cmd.Linux  st_base.cmd
resources/: nsls-compose.yml  optics_ioc_setup.txt
scripts/: build_tables.py  deployments.json  download_bits.sh
shared/agent-schemas/: bits_agent.json  bits_ioc_analyzer.json  ci_agent.json  devices_agent.json  ioc_agent.json  plans_agent.json
shared/compose/: README.md  aps-compose.yml
shared/utils/: yaml_json_converter.py
